--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# OSX
+**/.DS_Store
+
+# Eclipse & IDEs
+.idea
+.project
+.pydevproject
+.gitignore
